@@ -1,4 +1,12 @@
 2001-12-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* client-src/selfcheck.c (check_access): New function (old check_file 
+	  function).
+	* client-src/selfcheck.c (check_file): Check that the filename is a 
+	  file.
+	* client-src/selfcheck.c (check_dir): Check that dirname is a directory.
+
+2001-12-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 	Patch by Henning Schmiedehausen <henning@forge.intermeta.de>
 
 	* common-src/file.c (safe_cd): Create the AMANDA_DBGDIR and 
